[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Minimapa.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.901961, 0, 1, 0.392157 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 25.0
margin_right = 175.0
margin_bottom = -25.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 150.0
margin_bottom = 1030.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_right = 150.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 150.0
margin_bottom = 133.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel3" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 137.0
margin_right = 150.0
margin_bottom = 202.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel4" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 206.0
margin_right = 150.0
margin_bottom = 271.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel5" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 275.0
margin_right = 150.0
margin_bottom = 340.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel6" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 150.0
margin_bottom = 409.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel7" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 413.0
margin_right = 150.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel8" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 482.0
margin_right = 150.0
margin_bottom = 547.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel9" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 551.0
margin_right = 150.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel10" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 620.0
margin_right = 150.0
margin_bottom = 685.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel11" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 689.0
margin_right = 150.0
margin_bottom = 754.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel12" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 758.0
margin_right = 150.0
margin_bottom = 823.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel13" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 827.0
margin_right = 150.0
margin_bottom = 892.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel14" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 896.0
margin_right = 150.0
margin_bottom = 961.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Panel15" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 965.0
margin_right = 150.0
margin_bottom = 1030.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
